[tool.poetry]
name = "2022-10-07 python autoencoder example"
version = "0.1.0"
description = ""
authors = ["Orso"]
readme = "README.md"
packages = [{include = "2022_10_07 python autoencoder example"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
